[project]
name = "secret-leak"
version = "0.1.0"
description = "An example project to demonstrate secret leaks."
authors = [
    {name = "Gerasimos Tzakis",email = "gertzakis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.3,<0.15.0)",
    "yamllint (>=1.37.1,<2.0.0)"
]
